2006-07-10  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-extract-text.in: Generate .po files from the UI strings
	  in the currently installed Foomatic database (Thanks to Florian
	  Festi from Red Hat for this script).

	* lib/Foomatic/DB.pm: When reading PPD files extract the UI strings
	  always in UTF-8, taking into account the encoding of the PPD file
	  (Thanks to Florian Festi from Red Hat for this patch).

	* *: Way to many files were marked executable. Fixed.

2006-06-27  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: get_javascript2() can now also build the
	  script based on pre-read printer data. This avoids duplicate
	  reading of the Foomatic database and allows adding of extra
	  printers which are not in the Foomatic XML database (for example
	  new user-supplied entries).

2006-05-23  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Eliminated a warning.

2006-05-22  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.ac: Do never use CUPS commands "enable-cups",
	  "disable-cups", "accept-cups", "reject-cups", even if
	  executable files with these names are available. CUPS has only
	  one executable for these tasks and recognizes by the
	  executable/link name what to do. So it only accepts execution
	  with one of the names "enable", "disable", "accept", "reject".

	* lib/Foomatic/DB.pm: When generating PPD files from Foomatic
	  XML data and the option XML files contain "<arg_order>" tags
	  with different values, the options get ordered by the 
	  "<arg_order>" values (within their group). This way manually
	  defining the presentation order of the options gets possible.
	  Fixed also a buglet in the setting of the default of numerical
	  options.

	* foomatic-ppdfile.in: Removed "use strict;" due to an
	  incompatibility with the "getopts()" Perl function.

2006-05-20  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Improved group name parsing in the PPD